--- a/html/samples/ScatterChart_Setter.html
+++ b/html/samples/ScatterChart_Setter.html
@@ -668,8 +668,8 @@ table.hovertable td {
 </td>
 </tr>
 <tr>
-<td>DSXSetDataSelection(ScriptTxt);</td><td></td><td>Sets the Data Selection specifying the result set of a data source</td><td></td><td>In the following example the value of Data Selection specifying the result set of a data source is modified with the
-					  parameter of type <property>ResultSetSelection</property> having value ScriptTxt<br>.<br>SCATTERCHART_1.DSXSetDataSelection(ScriptTxt);<br>
+<td>DSXSetDataSelection({"[Measures]": "Quantity"});</td><td></td><td>Sets the Data Selection specifying the result set of a data source</td><td></td><td>In the following example the value of Data Selection specifying the result set of a data source is modified with the
+					  parameter of type <property>ResultSetSelection</property> having value {"[Measures]": "Quantity"}<br>.<br>SCATTERCHART_1.DSXSetDataSelection({"[Measures]": "Quantity"});<br>
 <br>
 </td><td></td><td>
 <table>
@@ -679,7 +679,7 @@ table.hovertable td {
 </tr>
 </th>
 <tr>
-<td>ScriptTxt</td><td>ResultSetSelection</td><td>Data Selection specifying the result set of a data source</td>
+<td>{"[Measures]": "Quantity"}</td><td>ResultSetSelection</td><td>Data Selection specifying the result set of a data source</td>
 </tr>
 </table>
 </td>
