--- a/html/samples/CustomDataSource_Getter.html
+++ b/html/samples/CustomDataSource_Getter.html
@@ -37,6 +37,12 @@ table.hovertable td {
 <td><B>Function Name</B></td><td></td><td><B>Description</B></td><td></td><td><B>Example</B></td><td></td><td><B>Returns</B></td>
 </tr>
 </th>
+<tr>
+<td>DSXGetAvailableSheets();</td><td></td><td>Returns the listofavailablesheets</td><td></td><td>In the following example DSXGetAvailableSheets(); is executed, <br>
+					  it returns the value of listofavailablesheets of type  String<br>XLSDATASOURCE_1.DSXGetAvailableSheets();<br>
+<br>
+</td><td></td><td>String</td>
+</tr>
 </table>
 </body>
 </html>
