--- a/html/samples/CustomDataSource_Setter.html
+++ b/html/samples/CustomDataSource_Setter.html
@@ -38,6 +38,23 @@ table.hovertable td {
 <td><B>Function Name</B></td><td></td><td><B>Description</B></td><td></td><td><B>Example</B></td><td></td><td><B>Parameters</B></td>
 </tr>
 </th>
+<tr>
+<td>DSXSetSheetName("strSheetName");</td><td></td><td>Sets the sheetname</td><td></td><td>In the following example the value of sheetname is modified with the
+					  parameter of type <property>String</property> having value "strSheetName"<br>.<br>XLSDATASOURCE_1.DSXSetSheetName("strSheetName");<br>
+<br>
+</td><td></td><td>
+<table>
+<th>
+<tr>
+<td>Name</td><td>Type</td><td>Description</td>
+</tr>
+</th>
+<tr>
+<td>"strSheetName"</td><td>String</td><td>sheetname</td>
+</tr>
+</table>
+</td>
+</tr>
 </table>
 </body>
 </html>
