--- a/html/samples/ResponsiveUI_Getter.html
+++ b/html/samples/ResponsiveUI_Getter.html
@@ -50,6 +50,12 @@ table.hovertable td {
 </td><td></td><td>boolean</td>
 </tr>
 <tr>
+<td>DSXGetVisibility();</td><td></td><td>Returns the visibility of the component including all its child components</td><td></td><td>In the following example DSXGetVisibility(); is executed, <br>
+					  it returns the value of visibility of the component including all its child components of type  boolean<br>RESPONSIVEUI_1.DSXGetVisibility();<br>
+<br>
+</td><td></td><td>boolean</td>
+</tr>
+<tr>
 <td>DSXGetActiveProfile();</td><td></td><td>Returns the Active Profile Name</td><td></td><td>In the following example DSXGetActiveProfile(); is executed, <br>
 					  it returns the value of Active Profile Name of type  String<br>RESPONSIVEUI_1.DSXGetActiveProfile();<br>
 <br>
