--- a/html/samples/ResponsiveUI_Setter.html
+++ b/html/samples/ResponsiveUI_Setter.html
@@ -38,6 +38,23 @@ table.hovertable td {
 <td><B>Function Name</B></td><td></td><td><B>Description</B></td><td></td><td><B>Example</B></td><td></td><td><B>Parameters</B></td>
 </tr>
 </th>
+<tr>
+<td>DSXSetVisibility(true);</td><td></td><td>Sets the visibility of the component including all its child components</td><td></td><td>In the following example the value of visibility of the component including all its child components is modified with the
+					  parameter of type <property>boolean</property> having value true<br>.<br>RESPONSIVEUI_1.DSXSetVisibility(true);<br>
+<br>
+</td><td></td><td>
+<table>
+<th>
+<tr>
+<td>Name</td><td>Type</td><td>Description</td>
+</tr>
+</th>
+<tr>
+<td>true</td><td>boolean</td><td>visibility of the component including all its child components</td>
+</tr>
+</table>
+</td>
+</tr>
 </table>
 </body>
 </html>
